# Binary-search-project

./: .gitignore  BinarySearch.cpp  BinarySearch.h  CMakeLists.txt  README.md  SimpleLogger.h  main.cpp  utils.cpp
docs/: Doxyfile
docs/html/: graph_legend.html  index.html
docs/latex/: refman.tex
src/: BinarySearch.cpp  BinarySearch.h  SimpleLogger.cpp  SimpleLogger.h  main.cpp
tests/: TestBinarySearch.cpp
